--- a/index.html
+++ b/index.html
@@ -200,13 +200,6 @@ var data_preprocessed_2013 = null;
 var data_preprocessed_2018 = null;
 async function init(){
 	const pop_data = await d3.csv('WPP2019_Period_Indicators_Medium.csv');
-	#const data_preprocessed = pop_data.filter(function(d){
-	#			          if(d.CBR==0 && d.CDR==0){
-	#				  }
-	#	                          else{
-	#				      return d;
-	#			          }
-	#                              })
 	data_preprocessed_1998 = pop_data
 	data_preprocessed_1998 = data_preprocessed.filter(function(d){
 				          if(d["epoc"]=="0"){
@@ -250,13 +243,13 @@ function updateScatterplot(pop_datayear, speed){
 	if(speed == "fast"){
          circle.transition()
                         .duration(10)
-                        .attr("cx",function(d){return xScale(d.batch#);})
+                        .attr("cx",function(d){return xScale(d.batch_in_test);})
                         .attr("cy",function(d){return yScale(d.loss);})
                         .attr("r",4);	}
 	else{
 		circle.transition()
                         .duration(5000)
-                        .attr("cx",function(d){return xScale(d.batch#);})
+                        .attr("cx",function(d){return xScale(d.batch_in_test);})
                         .attr("cy",function(d){return yScale(d.loss);})
                         .attr("r",4);
 	}
@@ -297,7 +290,7 @@ function createScatterplot(pop_datayear ){
 		  .selectAll('circle')
 		  .data(pop_datayear)
 		  .enter().append("circle")
-		  .attr("cx",function(d) {return xScale(d.batch#);})
+		  .attr("cx",function(d) {return xScale(d.batch_in_test);})
 		   .attr("cy",function(d) {return yScale(d.loss);})
 		   .attr("r",4)
 	           .append("title")
@@ -313,7 +306,7 @@ function updateContour(pop_datayear, speed){
 	var yScale=d3.scaleLinear().domain([0,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1.0,1.1,1.2,1.3,1.4,1.5,1.6,1.7,1.8,1.9,2.0]).range([height,0]);
 	var color = d3.scaleSequential(d3.interpolateTurbo).domain([0.000, 1.0]); 
 	  var contours = d3.contourDensity()
-	   .x(function(d,i){return xScale(d.batch#);})
+	   .x(function(d,i){return xScale(d.batch_in_test);})
 	  .y(function(d,i){return yScale(d.loss);})
 	 .size([width,height])
 	.bandwidth(20)
@@ -352,7 +345,7 @@ function updateContour(pop_datayear, speed){
 	var yScale=d3.scaleLinear().domain([0,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1.0,1.1,1.2,1.3,1.4,1.5,1.6,1.7,1.8,1.9,2.0]).range([height,0]);
 	var color = d3.scaleSequential(d3.interpolateTurbo).domain([0.000, 1.0]); 
 	  var contours = d3.contourDensity()
-	   .x(function(d,i){return xScale(d.batch#);})
+	   .x(function(d,i){return xScale(d.batch_in_test);})
 	   .y(function(d,i){return yScale(d.loss);})
 	   .size([width,height])
 	   .bandwidth(20)
