--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ function load_data(){
 	    .attr('transform', 'rotate(10)')
 	    .attr('text-anchor', 'begin')
             .attr("font-size",8)
-	    .text('0 population growth line');
+	    .text('');
 	if(slideIndex==1){
 		updateContour(data_preprocessed_1998, "fast");
 		updateScatterplot(data_preprocessed_1998, "fast");
